--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "^1.13.3",
+    "bower": "^1.7.7",
     "compression": "^1.5.2",
     "cookie-parser": "^1.3.3",
     "ejs": "^2.3.1",
