--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.13.3",
     "express-session": "^1.13.0",
     "glob": "^6.0.4",
+    "helmet": "^1.3.0",
     "method-override": "^2.3.0",
     "morgan": "^1.6.1",
     "request": "^2.69.0",
