--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "cookie-parser": "^1.3.3",
     "ejs": "^2.3.1",
@@ -19,6 +18,8 @@
     "request": "^2.69.0",
     "serve-favicon": "^2.3.0",
     "simple-oauth2": "^0.5.1",
+    "simple-timeago": "^1.0.0",
+    "underscore": "^1.8.3",
     "uuid": "^2.0.1"
   },
   "devDependencies": {
