--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "body-parser": "^1.15.0",
     "compression": "^1.5.2",
     "cookie-parser": "^1.3.3",
     "ejs": "^2.3.1",
