Update config to include meaningful name for URI

--- a/config/config.js.sample
+++ b/config/config.js.sample
@@ -36,7 +36,7 @@ var config = {
     CLIENT_ID:'', //Replace this with the client id received from the developer portal
     CLIENT_SECRET:'',  //Replace this with the client secret received from the developer portal
     REDIRECT_URI:'http://localhost:3000/authredirect',  //Replace this with the redirect uri entered in the developer portal
-    OAUTH_URI:'https://api-sandbox.capitalone.com',
+    BASE_URI:'https://api-sandbox.capitalone.com',
     SESSION_SECRET: 'This should be changed and not published anywhere!' //Change this to a random string
   },
 
